--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,300&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">	
 		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.4.0/mapbox-gl.css' rel='stylesheet'/>
-
+		<script src="https://unpkg.com/react-split/dist/react-split.js"></script>
 		<title>PartyFowl</title>
 	</head>
 	<body>
