--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
 		<link rel="icon" href="%PUBLIC_URL%/birdsoutline.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com"> 
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,300&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">	
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet">
 		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.4.0/mapbox-gl.css' rel='stylesheet'/>
 		<script src="https://unpkg.com/react-split/dist/react-split.js"></script>
 		<title>PartyFowl</title>
